Bug 28353 - Stanford App: iPad > Items are shifted to the right side on Menu screen after selecting

--- a/skins/weborder/css/products.css
+++ b/skins/weborder/css/products.css
@@ -3,6 +3,8 @@
 }
 
 .product_table .product {
+    display: inline-block;
+    vertical-align: top;
     width: 44%;
     padding: 7px 7px 7px 10px;
     cursor: pointer;
@@ -11,12 +13,16 @@
     border-width: 1px;
     border-style: dotted;
     border: 0px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
 }
 .product_table .product:not(.hide):nth-child(2n) {
-    float: right;
+    margin-left: 3%;
 }
 .product_table .product:not(.hide):nth-child(2n-1) {
-    float: left;
+    margin-right: 3%;
 }
 .product_table .product dl {
     position: relative;
